# satellite-claude-picture

./: .gitignore  README.md  app.py  build_exe.bat  build_exe.ps1  config.json  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1
src/satellite_cloud_reader/: __init__.py  analysis.py  config.py  gibs_client.py  google_map_widget.py  main.py  map_widget.py  osm_map_widget.py  reporting.py  ui.py
src/satellite_cloud_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_config.py  test_reporting.py
