[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-cloud-reader"
version = "0.1.0"
description = "Desktop app for reading NASA satellite cloud imagery."
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.3",
  "PySide6>=6.7",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pyinstaller>=6.8",
]

[project.scripts]
satellite-cloud-reader = "satellite_cloud_reader.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
